@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "RinexParser"
-version = "1.0.4"
+version = "1.1.0"
 authors = [
   { name="Juergen Fredriksson", email="surveyor@quantentunnel.de" },
 ]
@@ -28,3 +28,5 @@ Issues = "https://github.com/a5bru/RinexParser/issues"
 [tool.hatch.build.targets.wheel]
 packages = ["src/rinex_parser"]
 
+[project.scripts]
+ridah-main = "rinex_parser.scripts.main:run"
