@@ -30,6 +30,7 @@ RINEX3_HEADER_OBS_DESCRIPTOR = r"\ {4}[CDLSX][125678][ABCDILMNPQSWX]"
 RNX_FORMAT_DATETIME = "%Y-%m-%dT%H:%M:%SZ"
 RNX_FORMAT_DATE = "%Y-%m-%d"
 RNX_FORMAT_TIME = "%H:%M:%SZ"
+RNX_FORMAT_DATETIME_SHORT = "%Y%m%d %H%M%S"
 RNX_FORMAT_OBS_TIME = "  %Y    %m    %d    %H    %M   %S.%f0"
 
 MARKER_TYPES = (
